// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test app component full snapshot 1`] = `
<section
  className="hero is-primary"
>
  <div
    className="hero-body"
  >
    <div
      className="container"
    >
      <h1
        className="title"
      >
        React Testing With Jest
      </h1>
      <h2
        className="subtitle"
      >
        worapon
      </h2>
      <div>
        link: 
        <a
          href="www.google.com"
          target="_blank"
        >
          www.google.com
        </a>
      </div>
    </div>
  </div>
</section>
`;

exports[`Test app component shallow snapshot 1`] = `
<section
  className="hero is-primary"
>
  <div
    className="hero-body"
  >
    <div
      className="container"
    >
      <h1
        className="title"
      >
        React Testing With Jest
      </h1>
      <h2
        className="subtitle"
      >
        worapon
      </h2>
      <Link
        link="www.google.com"
      />
    </div>
  </div>
</section>
`;
